# kirei

./: Cargo.toml  README.md
benches/: axum_app.rs  deeply_nested.rs  different_sizes.rs  ice_cream_club.rs  large.rs
src/: askama.rs  check.rs  cli.rs  config.rs  context.rs  css.rs  diagnostics.rs  draw.rs  error.rs  extraction.rs  formatter.rs  helper.rs  html.rs  layout_engine.rs  lib.rs  main.rs  noted.rs  parse.rs  restoration.rs  sakura_tree.rs  session.rs  types.rs  wire.rs  woodcut.rs  write.rs
src/parse/: askama.rs  check.rs  mod.rs  parser.rs  seed.rs
src/sakura/: branch.rs  leaf.rs  mod.rs  ring.rs  tree.rs
tests/: askama.rs  askama_only.rs  axum_app.rs  collapsing.rs  doc_examples.rs  helper.rs  html.rs  html_only.rs  ice_cream_club.rs  is_ok.rs  long.rs  malformed.rs  miscellaneous.rs  mixed.rs  rules.rs  whitespace.rs
tests/fixtures/askama/: comment.html  filter.html  if_block.html  let_block.html  nested_comment.html  nested_matches.html
tests/fixtures/axum-app/: _layout.html  error.html  greet.html  index.html
tests/fixtures/css/: css_comments.html  css_for_loop_inline.html  css_for_loop_multiline.html  css_for_loop_nested.html  css_if_elif_else.html  css_if_else_inline.html  css_if_else_multiline.html  css_keyframes.html  css_let_statements.html  css_match_else_inline.html  css_match_else_multiline.html  css_match_inline.html  css_match_multiline.html  css_media_queries.html  css_mixed_complex.html  css_multiple_selectors.html  css_nested_conditions.html  css_variables.html  css_variables_expressions.html
tests/fixtures/diagnostics/: crossing_for.html  crossing_if.html  crossing_match.html  erroneous_end_tag_multiline.html  invalid_css.html  missing_block_name.html  unclosed_exp_inside_attr.html
tests/fixtures/html/: attribute.html  doctype.html  erroneous_end_tag.html  form.html  (+10 more)
tests/integration/: cli.rs  error.rs  main.rs  path.rs  success.rs
tests/snapshots/: askama.rs  askama__comment.snap  askama__filter.snap  askama__if_block.snap  askama__let_block.snap  askama__nested_comment.snap  askama_only__comment-2.snap  askama_only__comment.snap  askama_only__empty_if-2.snap  askama_only__empty_if.snap  askama_only__if_with_text-2.snap  askama_only__if_with_text.snap  askama_only__simple-2.snap  askama_only__simple.snap  axum_app.rs  axum_app__error-2.snap  axum_app__error.snap  axum_app__greet-2.snap  axum_app__greet.snap  axum_app__index-2.snap  axum_app__index.snap  axum_app__layout-2.snap  axum_app__layout.snap  collapsing__empty_block-2.snap  collapsing__empty_block.snap  collapsing__empty_block_with_whitespace.snap  collapsing__empty_block_with_whitespace_and_html-2.snap  collapsing__empty_block_with_whitespace_and_html.snap  css.rs  diagnostics.rs  doc_examples__base_template_1.snap  doc_examples__comment_1.snap  doc_examples__for_1.snap  html.rs  html__comment.snap  html__doctype.snap  html__form.snap  html__image.snap  html__link.snap  html__page.snap  (+128 more)
(+198 files in other folders)
