[package]
name = "kirei"
description = "Askama formatter"
version = "25.9.11"
authors = ["lpnh <paniguel.lpnh@gmail.com>"]
license = "Unlicense"
readme = "README.md"
keywords = ["askama", "formatter"]
categories = ["development-tools"]
repository = "https://github.com/lpnh/kirei.git"
edition = "2024"
autoexamples = false

include = ["src/*", "tests/*.rs"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
textwrap = "0.16.2"
tree-sitter = "0.25.10"
tree-sitter-askama = "0.1.0"
tree-sitter-html = "0.23.2"

[dev-dependencies]
insta = "1.43.2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
