[package]
name = "kirei"
description = "Askama formatter"
version = "25.10.4"
authors = ["lpnh <paniguel.lpnh@gmail.com>"]
license = "Unlicense"
readme = "README.md"
keywords = ["askama", "formatter"]
categories = ["development-tools"]
repository = "https://github.com/lpnh/kirei.git"
edition = "2024"
autoexamples = false

include = ["src/*", "tests/integration/*.rs"]

[lib]
bench = false

[[bin]]
name = "kirei"
bench = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
textwrap = "0.16.2"
tree-sitter = "0.25.10"
tree-sitter-askama = "0.1.0"
tree-sitter-html = "0.23.2"

[dev-dependencies]
insta = "1.43.2"
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
criterion = { version = "0.7.0", features = ["html_reports"] }
predicates = "3.1.3"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[[bench]]
name = "axum_app"
harness = false

[[bench]]
name = "ice_cream_club"
harness = false

[[bench]]
name = "deeply_nested"
harness = false

[[bench]]
name = "large"
harness = false
