[package]
name = "kirei"
description = "Askama formatter"
version = "25.12.29"
authors = ["lpnh <paniguel.lpnh@gmail.com>"]
license = "Unlicense"
readme = "README.md"
keywords = ["askama", "formatter"]
categories = ["development-tools"]
repository = "https://github.com/lpnh/kirei.git"
edition = "2024"
autoexamples = false

include = ["src/*", "tests/integration/*.rs"]

[lib]
bench = false

[[bin]]
name = "kirei"
bench = false

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4.25"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
tree-sitter = "0.26.3"
tree-sitter-askama = "0.2.0"
tree-sitter-html = "0.23.2"

[dev-dependencies]
insta = "1.45.1"
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
criterion = { version = "0.8.1", features = ["html_reports"] }
predicates = "3.1.3"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[[bench]]
name = "axum_app"
harness = false

[[bench]]
name = "ice_cream_club"
harness = false

[[bench]]
name = "deeply_nested"
harness = false

[[bench]]
name = "different_sizes"
harness = false
